Remove accidental copy/pasta

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         The working group maintains <a href=
         "https://github.com/w3c/payment-request/issues?utf8=%E2%9C%93&amp;q=is%3Aopen%20is%3Aissue%20-label%3A%22Priority%3A%20Postponed%22%20">
         a list of all bug reports that the group has not yet addressed</a>.
-        Pull requests with proposed-addition specification text for outstanding
+        Pull requests with proposed specification text for outstanding
         issues are strongly encouraged.
       </p>
       <p>
